--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
 blinker==1.8.2
 click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
 Flask==3.0.3
+fonttools==4.53.1
 fuzzywuzzy==0.18.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+kiwisolver==1.4.5
 Levenshtein==0.25.1
 MarkupSafe==2.1.5
+matplotlib==3.9.1
 networkx==3.3
+numpy==2.0.0
+packaging==24.1
+pillow==10.4.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-Levenshtein==0.25.1
 rapidfuzz==3.9.4
+six==1.16.0
 tree-sitter==0.21.3
 tree-sitter-languages==1.10.2
 Werkzeug==3.0.3
