`chore: Update .gitignore and requirements.txt, add CloneDetector class, and improve form layout`

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,48 @@
+asttokens==2.4.1
 blinker==1.8.2
 click==8.1.7
 contourpy==1.2.1
 cycler==0.12.1
+decorator==5.1.1
+executing==2.0.1
 Flask==3.0.3
 fonttools==4.53.1
 fuzzywuzzy==0.18.0
+graphviz==0.20.3
+ipython==8.26.0
 itsdangerous==2.2.0
+jedi==0.19.1
 Jinja2==3.1.4
+jsonpickle==3.2.2
+kaleido==0.2.1
 kiwisolver==1.4.5
 Levenshtein==0.25.1
 MarkupSafe==2.1.5
 matplotlib==3.9.1
+matplotlib-inline==0.1.7
 networkx==3.3
 numpy==2.0.0
 packaging==24.1
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.4.0
+plotly==5.22.0
+prompt_toolkit==3.0.47
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pydot==3.0.1
+Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-Levenshtein==0.25.1
+pyvis==0.3.2
 rapidfuzz==3.9.4
 six==1.16.0
+stack-data==0.6.3
+tenacity==8.5.0
+traitlets==5.14.3
 tree-sitter==0.21.3
 tree-sitter-languages==1.10.2
+typing_extensions==4.12.2
+wcwidth==0.2.13
 Werkzeug==3.0.3
